--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@docknetwork/wallet-components": "^0.1.0",
-    "@docknetwork/react-native-sdk": "file:/Users/maycon/dev/dock/dock-native-sdk-fallback",
+    "@docknetwork/react-native-sdk": "https://github.com/docknetwork/react-native-sdk",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
