--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "postinstall": "./node_modules/.bin/rn-nodeify --install --hack --yarn",
     "web:start": "yarn workspace @docknetwork/web-wallet start"
   },
+  "_resolutions": {
+    "jsonld": "3.2.0",
+    "@polkadot/api": "4.10.1",
+    "@polkadot/keyring": "6.4.1",
+    "@polkadot/types": "4.10.1",
+    "@polkadot/util": "6.4.1",
+    "@polkadot/util-crypto": "6.4.1",
+    "@polkadot/wasm-crypto": "^4.0.2"
+  },
   "workspaces": {
     "packages": [
       "packages/*"
