--- a/packages/web-wallet/package.json
+++ b/packages/web-wallet/package.json
@@ -17,6 +17,9 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "browserify-cipher": "^1.0.1",
     "native-base": "3",
+    "public-encrypt": "^4.0.3",
+    "randombytes": "^2.1.0",
+    "randomfill": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native-safe-area-context": "^3.2.0",
@@ -27,14 +30,15 @@
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "wasm-loader": "^1.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xxhash": "^0.3.0"
   },
   "devDependencies": {
     "babel-plugin-dotenv-import": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "craco build --workspace",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
