--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@docknetwork/react-native-sdk": ["../dock-rn-web-bridge"]
+      "@docknetwork/wallet-sdk-core": ["../react-native-sdk/packages/core"],
     }
   }
 }
