--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint './src/**/*.js' --max-warnings=0 --ignore-path=.prettierignore",
     "lint:fix": "eslint './src/**/*.js' --fix --ignore-path=.prettierignore",
     "format": "prettier './src/**/*.{js,json}' --write",
-    "postinstall": "./node_modules/.bin/rn-nodeify --install --hack --yarn && patch-package && jetifier && yarn webview:build-and-copy",
+    "postinstall": "./node_modules/.bin/rn-nodeify --install --hack --yarn && patch-package && jetifier",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
     "release:internal:android": "cd ./android && fastlane internal",
@@ -22,14 +22,13 @@
     "increment_version:android": "cd ./android && fastlane increment_version && cd ..",
     "increment_version": "yarn increment_version:ios && yarn increment_version:android",
     "link-sdk": "node ./scripts/link-sdk.js",
-    "webview:build-and-copy": "node ./node_modules/@docknetwork/wallet-sdk-bundler/build-and-copy.js"
+    "webview:build-and-copy": "node ./node_modules/@docknetwork/wallet-react-native/build-and-copy.js",
+    "sync-sdk": "sh ./scripts/sync-sdk.sh"
   },
   "dependencies": {
+    "@docknetwork/wallet-sdk-react-native": "0.1.0",
+    "@docknetwork/wallet-sdk-core": "0.1.0",
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
-    "@docknetwork/wallet-sdk-core": "https://github.com/docknetwork/react-native-sdk#d5aba02d1187500f653c9fa8e24dbcacd0311cf1",
-    "@docknetwork/wallet-sdk-transactions": "https://github.com/docknetwork/react-native-sdk#d5aba02d1187500f653c9fa8e24dbcacd0311cf1",
-    "@docknetwork/wallet-sdk-bundler": "https://github.com/docknetwork/react-native-sdk#d5aba02d1187500f653c9fa8e24dbcacd0311cf1",
-    "@docknetwork/react-native-sdk": "https://github.com/docknetwork/react-native-sdk#d5aba02d1187500f653c9fa8e24dbcacd0311cf1",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -75,7 +74,7 @@
     "react-native-camera": "^3.43.8",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^8.3.1",
-    "react-native-document-picker": "^5.2.0",
+    "react-native-document-picker": "8.0.0",
     "react-native-dotenv": "^2.5.5",
     "react-native-exit-app": "^1.1.0",
     "react-native-fs": "^2.18.0",
@@ -102,7 +101,7 @@
     "react-native-webview": "^11.4.3",
     "react-redux": "^7.2.3",
     "readable-stream": "^1.0.33",
-    "realm": "^10.6.1",
+    "realm": "10.6.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
