--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "sync-sdk": "sh ./scripts/sync-sdk.sh"
   },
   "dependencies": {
-    "@docknetwork/wallet-sdk-react-native": "0.1.0",
-    "@docknetwork/wallet-sdk-core": "0.1.0",
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@docknetwork/wallet-sdk-core": "^0.1.3",
+    "@docknetwork/wallet-sdk-react-native": "^0.1.3",
+    "@docknetwork/wallet-sdk-transactions": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -74,7 +75,7 @@
     "react-native-camera": "^3.43.8",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^8.3.1",
-    "react-native-document-picker": "8.0.0",
+    "react-native-document-picker": "6.1.1",
     "react-native-dotenv": "^2.5.5",
     "react-native-exit-app": "^1.1.0",
     "react-native-fs": "^2.18.0",
@@ -101,7 +102,7 @@
     "react-native-webview": "^11.4.3",
     "react-redux": "^7.2.3",
     "readable-stream": "^1.0.33",
-    "realm": "10.6.1",
+    "realm": "10.12.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
@@ -152,7 +153,8 @@
   "resolutions": {
     "@types/react": "^17",
     "react-native/@jest/create-cache-key-function": "^27.0.2",
-    "promise": "^8.1.0"
+    "promise": "^8.1.0",
+    "realm": "10.12.0"
   },
   "react-native": {
     "zlib": "browserify-zlib",
