--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,16 +1,15 @@
 name: Android Release
-on:
-  pull_request:
-      types: [opened, closed]
+on: [push]
+  # pull_request:
+  #     types: [opened, closed]
 jobs:
   internal_release_android:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
+    # if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.head_ref }}
           persist-credentials: false
 
       # - name: Setup node
@@ -66,3 +65,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: increment build number
+          branch: commit-from-ci
