--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -64,5 +64,9 @@ jobs:
           echo "testing" > test.js
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          commit_author_email: maycon.mellos@gmail.com
+          commit_author_name: Maycon Mellos
           commit_message: increment build number
           branch: commit-from-ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
