--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+          token: "${{ secrets.ACCESS_TOKEN }}"
 
       # - name: Setup node
       #   uses: actions/setup-node@v1
@@ -67,5 +68,3 @@ jobs:
           commit_user_email: maycon.mellos@gmail.com
           commit_user_name: Maycon Mellos
           commit_message: increment build number
-        env:
-          GITHUB_TOKEN: "${{ secrets.ACCESS_TOKEN }}"
