--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-          token: "${{ secrets.ACCESS_TOKEN }}"
+          token: "${{ secrets.GIT_ACCESS_TOKEN }}"
 
       # - name: Setup node
       #   uses: actions/setup-node@v1
