--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -11,57 +11,49 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: "${{ secrets.GIT_ACCESS_TOKEN }}"
+
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '15.x'
+
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.x'
+
       - name: Install and lint
         run: |
-          echo "testing" > test.js
+          git config --global url."https://".insteadOf git://
+          echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+          yarn install
+          yarn postinstall
+          rm -rf ./certs
+          git clone "https://${{ secrets.ACCESS_TOKEN }}@github.com/docknetwork/dock-app-certs.git" ./certs
+          mv ./certs/google-play.json ./
+          cp -rf ./certs/google-services.json ./android/app/
+          rm -rf ./android/gradle.properties
+          cp -rf ./certs/gradle.properties ./android/gradle.properties
+          # Pull env variables from certs repo
+          # It will inject sentry token in the JS thread
+          cp -rf ./certs/.env ./
+          rm -rf /tmp/google-play-cert
+          cp -rf ./certs/google-play-cert /tmp/google-play-cert
+
+      - name: Install Fastlane
+        run: gem install fastlane
+
+      - name: Release
+        env:
+          S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
+          S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
+          S3_APP_BUCKET: ${{ secrets.S3_APP_BUCKET }}
+          S3_REGION: ${{ secrets.S3_REGION }}
+          S3_ANDROID_APK_DIR: ${{ secrets.S3_ANDROID_APK_DIR }}
+          S3_ACL: ${{ secrets.S3_ACL }}
+        run: |
+          cd ./android
+          fastlane increment_version
+          # fastlane send_message
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: increment build number
-      # - name: Setup node
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: '15.x'
-
-      # - uses: actions/setup-ruby@v1
-      #   with:
-      #     ruby-version: '2.x'
-
-      # - name: Install and lint
-      #   run: |
-      #     git config --global url."https://".insteadOf git://
-      #     echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
-      #     yarn install
-      #     yarn postinstall
-      #     rm -rf ./certs
-      #     git clone "https://${{ secrets.ACCESS_TOKEN }}@github.com/docknetwork/dock-app-certs.git" ./certs
-      #     mv ./certs/google-play.json ./
-      #     cp -rf ./certs/google-services.json ./android/app/
-      #     rm -rf ./android/gradle.properties
-      #     cp -rf ./certs/gradle.properties ./android/gradle.properties
-      #     # Pull env variables from certs repo
-      #     # It will inject sentry token in the JS thread
-      #     cp -rf ./certs/.env ./
-      #     rm -rf /tmp/google-play-cert
-      #     cp -rf ./certs/google-play-cert /tmp/google-play-cert
-
-      # - name: Install Fastlane
-      #   run: gem install fastlane
-
-      # - name: Release
-      #   env:
-      #     S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
-      #     S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
-      #     S3_APP_BUCKET: ${{ secrets.S3_APP_BUCKET }}
-      #     S3_REGION: ${{ secrets.S3_REGION }}
-      #     S3_ANDROID_APK_DIR: ${{ secrets.S3_ANDROID_APK_DIR }}
-      #     S3_ACL: ${{ secrets.S3_ACL }}
-      #   run: |
-      #     cd ./android
-      #     # git config --global user.email "deploy@dock.io"
-      #     # git config --global user.name "Deploy"
-      #     fastlane increment_version
-      #     # git add . app/build.gradle
-      #     # git commit -m "increment android version"
-      #     # git push origin deploy
-      #     # fastlane send_message
-
+          commit_message: (android) increment build number
