--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -56,4 +56,5 @@ jobs:
           # fastlane send_message
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: (android) increment build number
+          commit_message: (CI) Android deploy
+           file_pattern: android/app/build.gradle
