--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -1,10 +1,5 @@
 name: TestFlight Release (iOS)
-on:
-  push:
-    branches:
-      - "!*"
-    tags:
-      - "v*"
+on: [push]
 jobs:
   internal_release_ios:
     runs-on: macos-latest
