--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -43,5 +43,5 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: (CI) iOS deploy
-          file_pattern: ios/DockApp.xcodeproj/project.pbxproj ios/DockApp/Info.plist ios/DockAppTests/Info.plist
+          file_pattern: ./DockApp.xcodeproj/project.pbxproj ./DockApp/Info.plist ./DockAppTests/Info.plist
 
