--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -3,15 +3,18 @@ on: [push]
 jobs:
   internal_release_ios:
     runs-on: macos-latest
+    # if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           token: "${{ secrets.GIT_ACCESS_TOKEN }}"
+
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: '15.x'
+
       - name: Run fastlane setup
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -40,6 +43,7 @@ jobs:
           cd ./ios
           pod install
           # fastlane build_upload_testflight
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: (CI) iOS deploy
