--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -42,6 +42,7 @@ jobs:
           cp -rf ./certs/GoogleService-Info.plist ./ios/
           cd ./ios
           pod install
+          fastlane increment_version
           # fastlane build_upload_testflight
 
       - uses: stefanzweifel/git-auto-commit-action@v4
