--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -48,5 +48,5 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: (CI) iOS deploy
-          file_pattern: ./DockApp.xcodeproj/project.pbxproj ./DockApp/Info.plist ./DockAppTests/Info.plist
+          file_pattern: *.pbxproj *.plist
 
