--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -58,4 +58,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: (CI) Android deploy
-          file_pattern: *.gradle
+          file_pattern: "*.gradle"
