--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,11 +1,13 @@
 name: Android Release
-on: [push]
-  # pull_request:
-  #     types: [opened, closed]
+on:
+  branches:
+      - "deploy"
+  pull_request:
+      types: [opened, closed]
 jobs:
   internal_release_android:
     runs-on: ubuntu-latest
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
