--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,7 +1,8 @@
 name: Android Release
 on:
-  branches:
-      - "deploy"
+  push:
+    branches:
+        - "deploy"
   pull_request:
       types: [opened, closed]
 jobs:
