--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,13 +1,12 @@
 name: Android Release
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - "deploy"
 jobs:
   internal_release_android:
     runs-on: ubuntu-latest
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
