--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -1,13 +1,12 @@
 name: TestFlight Release (iOS)
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - "deploy"
 jobs:
   internal_release_ios:
     runs-on: macos-latest
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -54,4 +53,3 @@ jobs:
         with:
           commit_message: (CI) iOS deploy
           file_pattern: "*.pbxproj *.plist"
-          branch: deploy
