--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: (CI) iOS deploy
+          commit_message: (CI) Increment build number
           file_pattern: "*.pbxproj *.plist *.gradle"
           branch: deploy
   # internal_release_android:
